[package]
authors = ["Craig Bishop <craig@craigjb.com>"]
edition = "2018"
name = "gameslab-smc"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cortex-m-rtfm = "0.5.1"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.stm32l0]
version = "0.9.0"
features = ["stm32l0x3", "rt"]

[dependencies.stm32l0xx-hal]
path = "../stm32l0xx-hal"
features = ["stm32l0x3", "rt", "disable-linker-script", "stm32-usbd"]

[dependencies.bbqueue]
version = "0.4.1"
default-features = false
features = ["thumbv6"]

# this lets you use `cargo fix`!
[[bin]]
name = "gameslab-smc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = false # better optimizations