[package]
authors = ["Craig Bishop <craig@craigjb.com>"]
edition = "2018"
name = "gameslab-smc"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cortex-m-rtic = "0.5.5"

[dependencies.stm32l0]
version = "0.9.0"
features = ["stm32l0x3", "rt"]

[dependencies.stm32l0xx-hal]
git = "https://github.com/craigjb/stm32l0xx-hal.git"
features = ["stm32l0x3", "rt", "disable-linker-script"]

# this lets you use `cargo fix`!
[[bin]]
name = "gameslab-smc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
